--- a/readme
+++ b/readme
@@ -1,3 +1,5 @@
 Landing Page Launch Rocket with HTML5, CSS and JS Vanilla
 
-![alt text](https://ychef.files.bbci.co.uk/976x549/p0bgc3nn.jpg)
+
+![alt text](https://github.com/vincios-santos/landing-page-launch/blob/main/https://ychef.files.bbci.co.uk/976x549/p0bgc3nn.jpg?raw=true)
+
